seq/tests/09-ident-span.stderr
error[E0425]: cannot find value `Missing0` in this scope
   |
34 |         let _ = Missing#N;
   |                 ^^^^^^^ not found in this scope

For more information about this error, try `rustc --explain E0425`.
